--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #1F2937;
+    background-color: #4ABC8A;
     padding: 0 20%;
 }
 
@@ -35,18 +35,21 @@ ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #1F2937;
+    background-color: #4ABC8A;
     color: #F9FAF8;
     padding: 5% 20%;
 }
 
 button {
-    color: #3882F6;
+    color: #543C88;
+    font-size: medium;
+    border-radius: 8px;
 }
 
 h1 {
     font-size: 48px;
     font-weight: 900;
+    color: #543C88;
 }
 
 .first {
@@ -54,16 +57,16 @@ h1 {
 }
 
 .first-left {
-    flex: 1;
+    width: 400px;
+    flex-grow: 0;
 }
 
-.image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.first-right {
+    width: 400px;
+    flex-grow: 0;
 }
 
-.image img {
+img {
     max-width: 100%;
     height: auto;
     /* Maintain aspect ratio */
@@ -76,6 +79,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 2% 20%;
 }
 
 .cards {
@@ -90,15 +94,14 @@ h1 {
 }
 
 .box {
-    width: 100px;
-    height: 100px;
-    border: 5px darkblue solid;
+    width: 200px;
+    height: 200px;
 }
 
 .third {
     display: flex;
     flex-direction: column;
-    background-color: #E5E7EB;
+    background-color: #69789D;
     padding: 0 20%;
 }
 
@@ -106,7 +109,7 @@ h1 {
     font-size: 36px;
     font-style: italic;
     font-weight: lighter;
-    color: #1f2937;
+    color: black;
 }
 
 .name {
@@ -116,20 +119,26 @@ h1 {
 
 .fourth {
     display: flex;
-    padding: 0 20%;
+    padding: 5% 20%;
 }
 
 .bluebox {
-    background-color: #3882F6;
+    background-color: #4ABC8A;
     flex: 1;
     padding: 3% 10%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 24px;
+}
+
+.text {
+    width: 70%;
+    color: #543C88;
 }
 
 .secondbutton {
-    background-color: #3882F6;
+    background-color: #543C88;
    color: white;
    border: 2px white solid;
 }
@@ -138,7 +147,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #1F2937;
+    background-color: #543C88;
 }
 
 .footertext {
